<resources>
    <string name="app_name">Room Info</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="title_agendaitem">Agenda Item</string>
    <string name="select">Select Occupancy:</string>
    <string name="agendaItemTitle">Title</string>
    <string name="descriptionTitle">Description:</string>
    <string name="allDay">All Day</string>
    <string name="delete">Delete</string>
    <string name="company">Company</string>
    <string name="roomName">Room Name</string>
    <string name="general">General</string>
    <string name="logo">Logo</string>
    <string name="network">Network</string>
    <string name="udpPort">UDP Port</string>
    <string name="tcpPort">TCP Port</string>
    <string name="selectFile">Select a file</string>
    <string name="roomNumber">Room Number</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="standardOccupancy">Standard Occupancy</string>
    <string name="theme">Theme</string>
    <string-array name="occupancy_states">
        <item>FREE</item>
        <item>PRESENT</item>
        <item>ABSENT</item>
        <item>BUSY</item>
        <item>OCCUPIED</item>
        <item>LOCKED</item>
        <item>HOMEOFFICE</item>
    </string-array>
    <string-array name="occupancy_titles">
        <item>F R E E</item>
        <item>P R E S E N T</item>
        <item>A B S E N T</item>
        <item>B U S Y</item>
        <item>O C C U P I E D</item>
        <item>L O C K E D</item>
        <item>H O M E O F F I C E</item>
    </string-array>
    <string-array name="occupancy_state_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="occupancy_icons">
        <item>✓</item>
        <item>★</item>
        <item>➔</item>
        <item>⧖</item>
        <item>⛛</item>
        <item>⨯</item>
        <item>⌂</item>
    </string-array>
    <string-array name="themes">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
