<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/general">
        <DropDownPreference
            android:entries="@array/themes"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:title="@string/theme"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="companyName"
            app:title="@string/company"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="roomName"
            app:title="@string/roomName"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="roomNumber"
            app:title="@string/roomNumber"
            app:useSimpleSummaryProvider="true" />
        <Preference
            android:key="logoPicker"
            android:title="@string/logo" />
        <DropDownPreference
            android:entries="@array/occupancy_states"
            android:entryValues="@array/occupancy_state_values"
            android:key="standardOccupancy"
            android:title="@string/standardOccupancy"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/network">
        <EditTextPreference
            app:key="udpPort"
            app:title="@string/udpPort"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="tcpPort"
            app:title="@string/tcpPort"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>