<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.marcusrunge.roominfo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.marcusrunge.roominfo.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar">
        <action
            android:id="@+id/action_navigation_calendar_to_navigation_agendaitem"
            app:destination="@id/navigation_agendaitem" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.marcusrunge.roominfo.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_agendaitem"
        android:name="com.marcusrunge.roominfo.ui.agendaitem.AgendaItemFragment"
        android:label="@string/title_agendaitem"
        tools:layout="@layout/fragment_agendaitem">
        <action
            android:id="@+id/action_agendaitem_to_calendar"
            app:destination="@id/navigation_calendar"
            app:popUpTo="@id/navigation_calendar" />
        <argument
            android:name="item_id"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>
</navigation>